# ldd-rust

./: Cargo.toml  README.md
src/: dep.rs  find_dumpbin.rs  main.rs  opts.rs  wina.rs
