[package]
name = "ldd"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
json = "0.12.4"
subprocess = "0.2.7"
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
winsafe = "0.0.5"
